Fix `/launcher/workspace/*` URL in launchpad

--- a/Client/elements/launcher-launchpad/launcher-launchpad.html
+++ b/Client/elements/launcher-launchpad/launcher-launchpad.html
@@ -2,7 +2,7 @@
 
 <template id="launchpad-tile">
   <launchpad-tile>
-    <a href="/workspace/{{appName}}">
+    <a href="/launcher/workspace/{{appName}}">
       <launchpad-icon>
         <!-- icon goes here -->
       </launchpad-icon>
