--- a/Client/LauncherTemplate.html
+++ b/Client/LauncherTemplate.html
@@ -120,7 +120,7 @@
 
 
       </div>
-      <div id="filters">
+      <!-- <div id="filters">
           <h2>Filter</h2>
           <template repeat="{{ appFilter }}">
               <core-field class="align-center">
@@ -128,7 +128,7 @@
                   <label>{{appName}}</label>
               </core-field>
           </template>
-      </div>
+      </div> -->
   </template>
   <puppet-js ref="root" ignoreadd="/_setup" useWebSocket></puppet-js>
 </body>
