--- a/Client/elements/launcher-partial/launcher-root-partial.html
+++ b/Client/elements/launcher-partial/launcher-root-partial.html
@@ -21,7 +21,8 @@ with predefined template content, which should be used to include partials.
         setup="[[ _setup | clonedSetup  ]]"
         defaultTileSetup="{
             'heightAuto': true,
-            'width': '100%'
+            'width': '100%',
+            'heightDynamic': true
         }">
       <template is="imported-template" content="{{Html}}"></template>
   </juicy-tile-grid>
