--- a/Client/elements/launcher-partial/launcher-root-partial.html
+++ b/Client/elements/launcher-partial/launcher-root-partial.html
@@ -12,8 +12,8 @@ with predefined template content, which should be used to include partials.
 
 <template id="partial-template">
   <template bind>
-   <!-- unfortunately [[ obj ]] does not work deep (for nested properties) -->
-    <juicy-tiles-setup-sync name="{{Html}}" storedValue="{{_setup}}" ></juicy-tiles-setup-sync>
+    <!-- FIXME: one-way binding here is temporary workaround for servers not accepting JSON-Patch (tomalec) -->
+    <juicy-tiles-setup-sync name="{{Html}}" storedValue="[[_setup]]" ></juicy-tiles-setup-sync>
     <juicy-tile-grid 
         id="juicy-tile:{{Html}}" 
         setup="[[ _setup | clonedSetup  ]]"
@@ -24,6 +24,7 @@ with predefined template content, which should be used to include partials.
         }">
       <template is="imported-template" content="{{Html}}"></template>
   </juicy-tile-grid>
+   <!-- unfortunately [[ obj ]] does not work deep (for nested properties) sp we need clonedSetup-->
   </template>
 </template>
 <script>
