--- a/Client/elements/launcher-layout/launcher-main.html
+++ b/Client/elements/launcher-layout/launcher-main.html
@@ -14,6 +14,8 @@
 
       -webkit-flex-direction: column;
       flex-direction: column;
+
+      height: 100%;
     }
     #top {
       display: -webkit-flex;
@@ -22,8 +24,8 @@
       -webkit-flex-direction: column;
       flex-direction: column;
 
-      -webkit-flex: 0 1 auto;
-      flex: 0 1 auto;
+      -webkit-flex: 0 0 auto;
+      flex: 0 0 auto;
 
       z-index: 100;
     }
@@ -32,8 +34,8 @@
       display: -webkit-flex;
       display: flex;
 
-      -webkit-flex: 1 1 auto;
-      flex: 1 1 auto;
+      -webkit-flex: 1 0 auto;
+      flex: 1 0 auto;
 
       -webkit-flex-direction: row;
       flex-direction: row;
