--- a/Client/elements/launcher-partial/launcher-root-partial.html
+++ b/Client/elements/launcher-partial/launcher-root-partial.html
@@ -96,7 +96,7 @@ with predefined template content, which should be used to include partials.
     };
 
 
-    document.register('launcher-root-partial', {
+    document.registerElement('launcher-root-partial', {
       prototype: LauncherPartialPrototype
     });   
   })();
