--- a/Client/LauncherMenu.html
+++ b/Client/LauncherMenu.html
@@ -1,7 +1,7 @@
 ﻿<template bind>
 
     <li>
-        <a href="/launcher/dashboard" title="Dashboard">
+        <a href="/dashboard" title="Dashboard">
             Dashboard				
         </a>
     </li>
