--- a/Client/LauncherTemplate.html
+++ b/Client/LauncherTemplate.html
@@ -74,7 +74,7 @@
 
       <div id="launcher-menu">
         <ul>
-          <li><a href="/launcher/dashboard"><core-icon class="launcher-dashboard-icon" icon="drive-site"></core-icon> <span>Dashboard</span></a></li>
+          <li><a href="/dashboard"><core-icon class="launcher-dashboard-icon" icon="drive-site"></core-icon> <span>Dashboard</span></a></li>
           <template bind="{{ menu }}">
               <template is="imported-template" content="{{ Html }}"></template>
           </template>
@@ -131,5 +131,5 @@
           </template>
       </div> -->
   </template>
-  <puppet-js ref="root" ignoreadd="/_setup" useWebSocket></puppet-js>
+  <puppet-js ref="root" ignoreadd="/_setup"></puppet-js>
 </body>
