--- a/Client/LauncherTemplate.html
+++ b/Client/LauncherTemplate.html
@@ -74,7 +74,7 @@
 
       <div id="launcher-menu">
         <ul>
-          <li><a href="/dashboard"><core-icon class="launcher-dashboard-icon" icon="drive-site"></core-icon> <span>Dashboard</span></a></li>
+          <li><a href="/launcher/dashboard"><core-icon class="launcher-dashboard-icon" icon="drive-site"></core-icon> <span>Dashboard</span></a></li>
           <template bind="{{ menu }}">
               <template is="imported-template" content="{{ Html }}"></template>
           </template>
