allow turning WebSocket on/off

--- a/Client/sys/juicy-tile-editor/src/juicy-tile-editor-form.html
+++ b/Client/sys/juicy-tile-editor/src/juicy-tile-editor-form.html
@@ -394,7 +394,15 @@
           <label class="toolbar-label">Priority</label>
         </div>
       </div>
+
+      <div class="editableGroup">
+        <div class="toolbar-item">
+          <input type="checkbox" checked="{{useWebSocket}}">
+          <label class="toolbar-label">WebSocket</label>
+        </div>
+      </div>
     </div>
+    <content></content>
   </template>
   <script src="juicy-tile-editor-form.js"></script>
 </polymer-element>
