--- a/Client/LauncherTemplate.html
+++ b/Client/LauncherTemplate.html
@@ -131,5 +131,22 @@
           </template>
       </div> -->
   </template>
-  <puppet-js ref="root" ignoreadd="/_setup" useWebSocket></puppet-js>
+
+  <puppet-js ref="root" ignoreadd="/_setup"></puppet-js>
+
+  <script>
+    function isUseWebSocket(useWebSocketStr) {
+      if(!useWebSocketStr) {
+        return true;
+      }
+      else if(useWebSocketStr == "false") {
+        return false;
+      }
+      else {
+        return true;
+      }
+    }
+
+    document.querySelector("puppet-js").useWebSocket = isUseWebSocket(window.localStorage.getItem("launcher-puppet-js-useWebSocket"));
+  </script>
 </body>
