--- a/Client/LauncherTemplate.html
+++ b/Client/LauncherTemplate.html
@@ -84,8 +84,11 @@
       <div id="launcher-content">          
         <div class="launchpad">
           <h1>Launchpad</h1>
+          <!-- Yes, it makes not much sense, but Launchpad only shows correct layout if `setup` attribute exists (used with `juicy-tiles-setup-sync`)-->
+          <juicy-tiles-setup-sync name="juicy-tile:/launchpad" storedValue="[[_setup]]" ></juicy-tiles-setup-sync>
           <juicy-tile-grid 
-              id="juicy-tile:/launchpad" 
+              id="juicy-tile:/launchpad"
+              setup="[[ _setup | clonedSetup  ]]"
               defaultTileSetup="{
                   'height': 82,
                   'width': 68
