--- a/Client/sys/juicy-tile-editor/index.html
+++ b/Client/sys/juicy-tile-editor/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="http://juicy.github.io/github-markdown-css/github-markdown.css">
 
   <!-- Importing Web Component's Polyfill -->
-  <script src="../platform/platform.js"></script>
+  <script src="../webcomponentsjs/webcomponents.js"></script>
   <link rel="import" href="../polymer/polymer.html">
 
   <!-- Importing Custom Elements -->
@@ -150,7 +150,7 @@ allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></
       items: [
         {"width": 128, "height": 100, "priority": 0.5, "index": 0},
         {"width": 512, "height": 100, "priority": 0.48, "gutter": 8, 
-        "innerHTML": "<div style=\"background: rgba(191, 81, 236, 0.5); position: relative; top: -8px; left: -8px; height: calc(100% + 2 * 8px ); width: calc(100% + 2 * 8px ); font-size: 100px;\"><marquee title=\"old school test\">☃</marquee></div>",
+        "innerHTML": "<div style=\"background: rgba(191, 81, 236, 0.5); position: relative; top: -8px; left: -8px; height: calc(100% + 2 * 8px ); width: calc(100% + 2 * 8px ); font-size: 100px;\"></div>",
         "items":[
           {"width": 256, "height": 100, "priority": 0.7, "index": 1},
           {"width": 128, "height": 100, "priority": 0.0, "index": 2}
