--- a/Client/sys/juicy-tile-list/index.html
+++ b/Client/sys/juicy-tile-list/index.html
@@ -5,13 +5,7 @@
     <title>&lt;juicy-tile-list&gt;</title>
 
     <!-- Importing Web Component's Polyfill -->
-    
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/polymer/0.3.4/platform.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/polymer/0.3.4/polymer.js"></script>
-    <!--
-    <script src="../platform/platform.js"></script>
-    <script src="../polymer/polymer.js"></script>
-    -->
+    <script src="../webcomponentsjs/webcomponents.js"></script>
     <!-- Importing Custom Elements -->
     <link rel="import" href="src/juicy-tile-list.html">
 
@@ -85,7 +79,8 @@ section input{
                         index:1,
                         priority:0.8,// 0.9,
                         height: 100,
-                        width:50
+                        width:50,
+                        hidden: false
                     },
                     {
                         index:2,
