Enable OT in PuppetJS/PuppetJS communication

--- a/Client/LauncherTemplate.html
+++ b/Client/LauncherTemplate.html
@@ -136,8 +136,6 @@
           </template>
       </div> -->
   </template>
-
-  <!-- localVersionPath set to falsy "" to disable versioning -->
-  <puppet-client ref="root" localVersionPath=""></puppet-client>
+  <puppet-client ref="root"></puppet-client>
   <starcounter-debug-aid></starcounter-debug-aid>
 </body>
