Update warpech/warpech-display-router@0.1.1 - fixes #6

--- a/Client/sys/warpech-display-router/warpech-display-router.html
+++ b/Client/sys/warpech-display-router/warpech-display-router.html
@@ -24,6 +24,7 @@
         if (elem) {
           if (show) {
             elem.style.display = "";
+            elem.dispatchEvent(new CustomEvent("resize",{bubbles: false}));
           }
           else {
             elem.style.display = "none";
