Modified client files according to new merging.

--- a/Client/LauncherMenu.html
+++ b/Client/LauncherMenu.html
@@ -1,9 +1,5 @@
-﻿<template bind>
+﻿<template bind="{{Launcher}}">
 
-    <li>
-        <a href="/launcher/dashboard" title="Dashboard">
-            Dashboard				
-        </a>
-    </li>
+    <li><a href="/launcher/dashboard"><core-icon class="launcher-dashboard-icon" icon="dashboard"></core-icon> <span>Dashboard</span></a></li>
 
 </template>
