--- a/Client/elements/launcher-launchpad/launcher-launchpad.html
+++ b/Client/elements/launcher-launchpad/launcher-launchpad.html
@@ -113,7 +113,7 @@
       if( newVal.icons.Html ){
         var launchpad = this;
         loadIconsTemplate(
-          "/launchpad" + newVal.icons.Html,
+          "/launcher/launchpad" + newVal.icons.Html,
           function processImportedDocument(){
             launchpad.clear();
 
