--- a/Client/LauncherTemplate.html
+++ b/Client/LauncherTemplate.html
@@ -53,6 +53,7 @@
 
 <body is="launcher-main">
   <template id="root" bind>
+    <template bind="{{Launcher}}">
       <div class="launcher-toolbar launcher-topbar">
           <a href="/"><img id="homeIcon" src="/images/elusive-iconfont/dev/icons-svg/home.svg"></a>
           <core-field class="launcher-theme">
@@ -76,7 +77,6 @@
 
       <div id="launcher-menu">
         <ul>
-          <li><a href="/launcher/dashboard"><core-icon class="launcher-dashboard-icon" icon="drive-site"></core-icon> <span>Dashboard</span></a></li>
           <template bind="{{ menu }}">
               <template is="imported-template" content="{{ Html }}"></template>
           </template>
@@ -135,6 +135,7 @@
               </core-field>
           </template>
       </div> -->
+    </template>
   </template>
   <puppet-client ref="root"></puppet-client>
   <starcounter-debug-aid></starcounter-debug-aid>
