--- a/Client/LauncherMenu.html
+++ b/Client/LauncherMenu.html
@@ -1,4 +1,4 @@
-﻿<template bind="{{Launcher}}">
+<template>
 
     <li><a href="/launcher/dashboard"><core-icon class="launcher-dashboard-icon" icon="dashboard"></core-icon> <span>Dashboard</span></a></li>
 
